k8s/extract-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extract
  namespace: rmpca
  labels:
    app: extract
    component: node-ws
spec:
  type: ClusterIP
  selector:
    app: extract
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
