k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: rmpca
  labels:
    app: redis
    component: broker
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
